Fix hover bug and realign login

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -254,8 +254,13 @@ select {
     }
 }
 
+
+// code below handles transition navbar button transition from hamburger to x
 $transition-dur: .2s;
+// same as native bootstrap button-size
 $button-size: 22px;
+
+// line element. Mixin so that it can be reused
 @mixin line {
   display: inline-block;
   width: $button-size;
@@ -269,35 +274,47 @@ $button-size: 22px;
   @include line;
   position: relative; 
 
+  // inserts top and bottom lines via css. Are not actually in DOM
   &:before, &:after {
    @include line;
     position: absolute;
     left:0;
     content: '';
-    -webkit-transform-origin: $button-size/14 center;
-    transform-origin: $button-size/14 center;
   }
   &:before { 
-    top: 6px; 
+    top: -6px; 
   }
   &:after { 
-    top: -6px; 
+    top: 6px; 
   }
 }
 
 .lines-button{
+  // place lines button on left if not mobile
   @media only screen and (min-device-width: $screen-xs){
     position: absolute;
     left: 210px;
   }
+
+  // place lines-button on right if mobile
+  @media only screen and (max-device-width:$screen-xs){
+    float: right !important;
+    position:relative;
+    margin-right: 15px;
+  }
+
+  // set height to length of navbar and width 
+  // to bootstrap default
   border: none;
-  height: 55px;
+  height: 60px;
   width: 42px;
   padding-bottom: 9px;
   background-color: transparent;
   &:focus{
     outline: 0;
   }
+
+  // change lines to blue on hover
   &:hover{
     .lines:before, .lines:after, .lines{
       background-color: $blue;
@@ -305,16 +322,16 @@ $button-size: 22px;
   }
 }
 
-
-//three-lines to x method 2
-.lines-button{
+.lines-button {
   .lines{
-    transition: background $transition-dur $transition-dur ease;
+    transition: background $transition-dur 0s ease;
 
+    // set transition origin and duration
     &:before, &:after{
-      //set transform origin
+      // transition origin set to center
     -webkit-transform-origin: 50% 50%;
             transform-origin: 50% 50%;
+
       transition: top $transition-dur $transition-dur ease, -webkit-transform $transition-dur ease;
       transition: top $transition-dur $transition-dur ease, transform $transition-dur ease;
     }
@@ -323,16 +340,17 @@ $button-size: 22px;
 
 .lines-button.closed{
   .lines {
-
     transition: background $transition-dur 0s ease;
     background: transparent;
 
     &:before, &:after{
-      transition: top $transition-dur ease, -webkit-transform $transition-dur $transition-dur ease;//delay the formation of the x till the minus is formed  
-      transition: top $transition-dur ease, transform $transition-dur $transition-dur ease;//delay the formation of the x till the minus is formed  
+      transition: top $transition-dur ease, -webkit-transform $transition-dur $transition-dur ease; //delay the formation of the x till the minus is formed  
+      transition: top $transition-dur ease, transform $transition-dur $transition-dur ease; //delay the formation of the x till the minus is formed  
       top:0;
       width: $button-size;
     }
+
+    // rotate before and after to create the x
     &:before{
       -webkit-transform: rotate3d(0,0,1,45deg); 
               transform: rotate3d(0,0,1,45deg); 
@@ -342,4 +360,9 @@ $button-size: 22px;
               transform: rotate3d(0,0,1,-45deg); 
     }
   }
+}
+
+// for use with javascript. Eliminates color-change lag on hover
+.notransition {
+  transition: none !important;
 }
